# dccbot

./: .gitignore  LICENSE  Makefile  README.md  aiodcc.py  bot.py  config.json.sample  log.html  pyproject.toml
.github/workflow/: check.yml
.github/workflows/: check.yml
dccbot/: aiodcc.py  app.py  ircbot.py  manager.py
static/: info.html  log.html
tests/: test_app1.py
