[project]
name = "dccbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.12",
    "irc>=20.5.0",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "tox>=4.24.1",
]


[tool.ruff]
line-length = 160
indent-width = 4  # Same as autopep8 default

[tool.ruff.format]
quote-style = "double"  # Or "single" if you prefer
indent-style = "space"  # Use spaces instead of tabs
line-ending = "lf"  # Keep consistency
preview = true

[tool.ruff.lint]
select = ["E9", "F82", "D"]  # Syntax errors + docstrings
ignore = ["D203", "D213", "D100", "F821"]  # Ignore specific docstring rules

